--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <title>認証</title>
 </head>
 <body>
@@ -15,6 +15,9 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
                     <a href="/" class="nav-link">ホーム</a>
+                </li>
+                 <li class="nav-item">
+                    <a href="{% url 'profile' %}" class="nav-link">プロフィール</a>
                 </li>
             </ul>
         </div>
