--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -9,24 +9,24 @@
             <tbody>
                 <tr>
                     <th class="header">名前</th>
-                    <td class="data">xxxx</td>
+                    <td class="data">{{ user_data.first_name }}</td> {{ user_data.last_name }}
                 </tr>
                 <tr>
                     <th class="header">メールアドレス</th>
-                    <td class="data">xxxx</td>
+                    <td class="data">{{ user_data.email }}</td>
                 </tr>
                 <tr>
                     <th class="header">所属</th>
-                    <td class="data">xxxx</td>
+                    <td class="data">{{ user_data.department }}</td>
                 </tr>
                 <tr>
                     <th class="header">入会日</th>
-                    <td class="data">xxxx</td>
+                    <td class="data">{{ user_data.created }}</td>
                 </tr>
             </tbody>
         </table>
         <div class="button mx-auto">
-            <a href="" class="btn btn-lg btn-warning btn-block">編集</a>
+            <a href="{% url 'profile_edit' %}" class="btn btn-lg btn-warning btn-block">編集</a>
         </div>
     </div>
 </div>
